<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/transparent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/playlist_details_layout"
        android:layout_width="match_parent"
        android:background="@drawable/playlist_activity_background"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playlist_activity_close_button"
                android:contentDescription="@string/playlist_close_button_content_description"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/down_arrow"
                android:layout_gravity="top"
                />

            <ImageView
                android:id="@+id/playlist_activity_image"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginTop="-10dp"
                android:src="@drawable/cover"
                android:layout_gravity="center_horizontal"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/playlist_activity_playlist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Playlist Title"
                android:textColor="@color/light_white"
                android:textSize="@dimen/playlist_activity_playlist_title_text_size"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/playlist_activity_playlist_tracks_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_centerVertical="true"
                android:text="@string/playlist_activity_track_count_text"
                android:textColor="@color/light_white"
                android:textSize="@dimen/playlist_activity_playlist_tracks_count_text_size"
            />

            <RelativeLayout
                android:id="@+id/playlist_activity_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <Button
                    android:id="@+id/player_activity_play_btn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/playlist_activity_play_button_bg"
                    android:drawableLeft="@drawable/playlist_activity_play_icon"
                    android:paddingStart="33dp"
                    android:paddingEnd="33dp"
                    android:text="@string/playlist_activity_play_button"
                    android:textColor="@color/playlist_activity_play_button_text"
                    app:layout_constraintEnd_toStartOf="@+id/player_activity_shuffle_button"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/player_activity_shuffle_button"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/playlist_activity_shuffle_button_bg"
                    android:drawableLeft="@drawable/playlist_activity_shuffle_icon"
                    android:paddingStart="23dp"
                    android:paddingEnd="23dp"
                    android:text="@string/playlist_activity_shuffle_button"
                    android:textColor="@color/playlist_activity_shuffle_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/player_activity_play_btn" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
                android:layout_marginTop="30dp"
                android:id="@+id/player_activity_track_list"
                android:contentDescription="@string/player_content_description"
                android:name="wave.ui.main.LibraryFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                tools:context=".sections.PlaylistDetailsFragment"
                tools:listitem="@layout/player_list_item" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
